<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="@string/tv_goals_title_string"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/desc_background"
        android:padding="20dp"
        android:text="@string/desc_arcade"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background_agree"
        android:padding="20dp"
        android:text="@string/btn_start_string"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background_cancel"
        android:padding="20dp"
        android:text="@string/btn_cancel_string"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <ImageView
        android:id="@+id/paperpin"
        android:layout_width="96dp"
        android:layout_height="192dp"
        android:src="@drawable/paper_pin"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintTop_toTopOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>