<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/desc_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--    Title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:padding="20dp"
            android:text="@string/res_lose"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    Score-->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="20dp"
            android:text="@string/res_score"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/tv_score_value_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="20dp"
            android:text="0"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />


        <!--    HighScore-->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="32dp"
            android:padding="20dp"
            android:text="@string/res_highscore"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_highscore_value_res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/tv_highscore_value_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="0"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_value_res" />
    </androidx.constraintlayout.widget.ConstraintLayout>


<!--    Buttons-->

    <Button
        android:id="@+id/btn_again"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_background_agree"
        android:padding="20dp"
        android:text="@string/btn_playagain"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:text="@string/btn_mainmenu"
        android:textStyle="bold|italic"
        android:background="@drawable/button_background_cancel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_again"
        app:layout_constraintStart_toStartOf="@+id/btn_again"
        app:layout_constraintTop_toBottomOf="@+id/btn_again" />


<!--    Picture-->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="107dp"
        android:src="@drawable/paper_pin"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>